rulex (3.4.6jessie1) jessie; urgency=low

  * Distribution specific build.
  * Bump standards version.
  * Build dependencies fix.

 -- Igor B. Poretsky <poretsky@mlbox.ru>  Mon, 13 Nov 2017 23:40:20 +0300

rulex (3.4.6) unstable; urgency=low

  * Lexical database correction

 -- Igor B. Poretsky <poretsky@mlbox.ru>  Mon, 23 Oct 2017 22:47:06 +0300

rulex (3.4.5) unstable; urgency=low

  * Lexical database update.

 -- Igor B. Poretsky <poretsky@mlbox.ru>  Sun, 17 Sep 2017 18:12:24 +0300

rulex (3.4.4) unstable; urgency=low

  * Lexical database update. A bunch of additions, corrections and
    optimizations.

 -- Igor B. Poretsky <poretsky@mlbox.ru>  Fri, 30 Jun 2017 22:38:12 +0300

rulex (3.4.3) unstable; urgency=low

  * Lexical database update.

 -- Igor B. Poretsky <poretsky@mlbox.ru>  Mon, 19 Jun 2017 23:03:20 +0300

rulex (3.4.2) unstable; urgency=low

  * Lexical database fix.

 -- Igor B. Poretsky <poretsky@mlbox.ru>  Sun, 12 Mar 2017 00:09:40 +0300

rulex (3.4.1) unstable; urgency=low

  * Lexical database corrections.

 -- Igor B. Poretsky <poretsky@mlbox.ru>  Fri, 20 Jan 2017 22:55:11 +0300

rulex (3.4.0) unstable; urgency=low

  * Overall lexical database revision.

 -- Igor B. Poretsky <poretsky@mlbox.ru>  Fri, 30 Dec 2016 18:28:52 +0300

rulex (3.3.10) unstable; urgency=low

  * Lexical database corrections and additions.

 -- Igor B. Poretsky <poretsky@mlbox.ru>  Thu, 24 Nov 2016 20:52:22 +0300

rulex (3.3.9) unstable; urgency=low

  * Lexical database corrections.

 -- Igor B. Poretsky <poretsky@mlbox.ru>  Sat, 12 Nov 2016 05:23:29 +0300

rulex (3.3.8) unstable; urgency=low

  * Lexical database update.

 -- Igor B. Poretsky <poretsky@mlbox.ru>  Tue, 01 Nov 2016 20:58:18 +0300

rulex (3.3.7) unstable; urgency=low

  * Lexical database improvement.

 -- Igor B. Poretsky <poretsky@mlbox.ru>  Fri, 22 Jul 2016 23:10:44 +0300

rulex (3.3.6) unstable; urgency=low

  * Dictionary update.
