@@ -3,8 +3,9 @@ rulex (3.4.6jessie1) jessie; urgency=low
   * Distribution specific build.
   * Bump standards version.
   * Build dependencies fix.
+  * Respect default Debian compiler flags.
 
- -- Igor B. Poretsky <poretsky@mlbox.ru>  Mon, 13 Nov 2017 23:40:20 +0300
+ -- Igor B. Poretsky <poretsky@mlbox.ru>  Mon, 13 Nov 2017 23:56:42 +0300
 
 rulex (3.4.6) unstable; urgency=low
 
